<resources>
    <string name="app_name">TestWebView</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_load_asset">load asset</string>
    <string name="txt_change_color">change color</string>
    <string name="txt_load">load</string>
    <string name="txt_url_https_www_google_de">https://www.google.de</string>
    <string name="txt_url">url</string>
</resources>