<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_error"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            >


        <Button
            android:id="@+id/button_load_asset_html"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/txt_load_asset" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_change_color"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/black"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:text="@string/txt_change_color" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <Button
            android:id="@+id/button_load"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/txt_load" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <EditText
                android:id="@+id/url"
                android:maxLines="1"
                android:inputType="textUri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:background="@android:drawable/editbox_background"
                android:text="@string/txt_url_https_www_google_de"
                android:hint="@string/txt_url"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:autofillHints="enter url" />

        </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>